<resources>
    <string name="app_name">Apphub</string>
    <string name="account_creation">Account creation</string>
    <string name="server_address_hint">Server address</string>
    <string name="offline_mode">Offline mode</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="login">Login</string>
    <string name="register">Create account</string>
    <string name="username">Username</string>
    <string name="remember_my_email">Remember my email</string>
    <string name="back">Back</string>

    <string name="server_address_key">server_address</string>
    <string name="offline_mode_key">offline_mode_key</string>
    <string name="login_email_key">login_email_key</string>
    <string name="remember_my_email_key">remember_my_email_key</string>
    <string name="invalid_email">Invalid email</string>
    <string name="username_too_short">Username too short</string>
    <string name="username_too_long">Username too long</string>
    <string name="password_too_short">Password is too short</string>
    <string name="password_too_long">Password is too long</string>
    <string name="incorrect_confirm_password">Incorrect confirm password</string>
    <string name="invalid_data">Invalid data.</string>
    <string name="account_created">Account successfully created.</string>
    <string name="server_not_accessible">Server cannot be accessed.</string>
    <string name="unsupported_operation">Unsupported operation. This feature is not implemented yet.</string>
</resources>